--- a/src/pinchito/index.html
+++ b/src/pinchito/index.html
@@ -6,7 +6,7 @@
   </head>
   <body></body>
   <script type="module">
-    import { Component, mount, html } from './main.js'
+    import { Component, mount, html } from './main.ts'
 
     class Counter extends Component {
       constructor() {
