--- a/src/revuan/index.html
+++ b/src/revuan/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>PinchitoJS</title>
+    <title>ReVuAnJS</title>
   </head>
   <body></body>
   <script type="module">
